--- a/src/style.css
+++ b/src/style.css
@@ -46,7 +46,8 @@ html {
 
 /* Animaciones para EmailVerify */
 @keyframes pulse {
-    0%, 100% {
+    0%,
+    100% {
         transform: scale(1);
         opacity: 1;
     }
